--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,8 @@ PORT = 3001
 
 MONGO_URI = mongodb+srv://asantesamuel4:dleBj6JZzGaQBM2m@cluster0.q8whqzv.mongodb.net/Amalitech
 
-MAIL = "asantesamuel4@gmail.com"
+MAIL = asantesamuel4@gmail.com
 
+JWT_SECRET= amalitechproject
 
-PASSWORD = "kpla cwru qxyy pxkj"
+PASSWORD = kpla cwru qxyy pxkj
