--- a/backend/.env
+++ b/backend/.env
@@ -5,5 +5,6 @@ MONGO_URI = mongodb+srv://asantesamuel4:dleBj6JZzGaQBM2m@cluster0.q8whqzv.mongod
 MAIL = asantesamuel4@gmail.com
 
 JWT_SECRET= amalitechproject
+ADMIN_JWT_SECRET= amalitechprojectadmin
 
 PASSWORD = kpla cwru qxyy pxkj
